--- a/Nez.ImGui/Nez.ImGui.csproj
+++ b/Nez.ImGui/Nez.ImGui.csproj
@@ -6,7 +6,7 @@
 
     <PropertyGroup>
         <OutputType>Library</OutputType>
-        <TargetFramework>net471</TargetFramework>
+		<TargetFrameworks>net471;netstandard2.0</TargetFrameworks>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -56,9 +56,17 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="ImGui.NET" Version="1.71.0" />
-        <PackageReference Include="MonoGame.Framework.Portable" Version="3.7.1.189" PrivateAssets="all" />
     </ItemGroup>
 
-    <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
+	<ItemGroup Condition=" '$(TargetFramework)' == 'net471' ">
+		<PackageReference Include="ImGui.NET" Version="1.71.0" />
+		<PackageReference Include="MonoGame.Framework.Portable" Version="3.7.1.189" PrivateAssets="all" />
+	</ItemGroup>
+
+	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+		<PackageReference Include="ImGui.NET" Version="1.71.0" />
+		<PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
+	</ItemGroup>
+
+	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
 </Project>
